hphp/hack/test/typecheck/is_expression/talias3.php.exp
File "talias3.php", line 7, characters 13-15:
Invalid "is" expression hint (Typing[4195])
  File "talias3.php", line 7, characters 13-15:
  The "is" operator cannot be used with a type with an erased generic type argument
